--- a/index.html
+++ b/index.html
@@ -1,20 +1,29 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="./public/Favicon_planet.png" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Facebook Open Graph -->
-        <meta property="og:title" content="Planet Charts | Paolo Viviani" />
-        <meta property="og:type" content="website" />
-        <meta property="og:description" content="A series of graphs shows how global warming and greenhouse gases have increased in recent years" />
-        <meta property="og:url" content="https://planetcharts.netlify.app" />
-        <meta property="og:image" content="./src/assets/images/planet-opengraph.jpg" />
+    <meta property="og:title" content="Planet Charts | Paolo Viviani" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:description"
+      content="A series of graphs shows how global warming and greenhouse gases have increased in recent years"
+    />
+    <meta property="og:url" content="https://planetcharts.netlify.app" />
+    <meta
+      property="og:image"
+      content="./src/assets/images/planet-opengraph.jpg"
+    />
     <!-- Twitter Open Graph -->
-        <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:card" content="summary_large_image" />
     <title>Planet Charts</title>
   </head>
   <body>
